Fix spacing between top of content and navbar

--- a/src/desktop/apps/articles/stylesheets/articles.styl
+++ b/src/desktop/apps/articles/stylesheets/articles.styl
@@ -4,7 +4,7 @@ gutter-unit = 15px
 
 body.body-articles
   #main-layout-container
-    margin 50px 0px 0px 0px
+    margin 94px 0px 0px 0px
     max-width 100%
 
 .articles-articles-page
